--- a/quizz.css
+++ b/quizz.css
@@ -12,6 +12,7 @@ font-family: 'Poppins', sans-serif;
      display: none;
 }
 .sec-one{
+     overflow: hidden;
      position: relative;
      width: 100%;
      height: 100vh;
